refactor: delete some useless zip , changed dependencies to be in the current uv from gen ai folder

--- a/main.ipynb
+++ b/main.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ae653245",
    "metadata": {},
    "outputs": [
@@ -54,38 +54,35 @@
      "output_type": "stream",
      "text": [
       "Connexion SSH...\n",
-      "Tunnel ouvert. Envoi de la requête vers http://127.0.0.1:36357/generate...\n",
-      "Succès ! Téléchargement du ZIP...\n",
-      "Fichier 'resultat_texture.zip' reçu !\n",
-      "Chemin complet vers le dossier mesh : /home/kevivois/Duckify/genai/extracted_20260226_154048/experiment_api/mesh\n",
-      "Fichiers extraits dans mesh : ['mesh.mtl', 'mesh.obj', 'albedo.png']\n",
-      "['mesh.mtl', 'mesh.obj', 'albedo.png']\n"
+      "Tunnel ouvert. Envoi de la requête vers http://127.0.0.1:33187/generate...\n"
      ]
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'albedo.png'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m files_path:\n\u001b[32m     12\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m file.endswith(\u001b[33m'\u001b[39m\u001b[33m.png\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m         img = \u001b[43mplt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mimread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m         plt.imshow(img)\n\u001b[32m     15\u001b[39m         plt.show()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Duckify/.venv/lib/python3.13/site-packages/matplotlib/pyplot.py:2614\u001b[39m, in \u001b[36mimread\u001b[39m\u001b[34m(fname, format)\u001b[39m\n\u001b[32m   2610\u001b[39m \u001b[38;5;129m@_copy_docstring_and_deprecators\u001b[39m(matplotlib.image.imread)\n\u001b[32m   2611\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mimread\u001b[39m(\n\u001b[32m   2612\u001b[39m         fname: \u001b[38;5;28mstr\u001b[39m | pathlib.Path | BinaryIO, \u001b[38;5;28mformat\u001b[39m: \u001b[38;5;28mstr\u001b[39m | \u001b[38;5;28;01mNone\u001b[39;00m = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   2613\u001b[39m ) -> np.ndarray:\n\u001b[32m-> \u001b[39m\u001b[32m2614\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mmatplotlib\u001b[49m\u001b[43m.\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m.\u001b[49m\u001b[43mimread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mformat\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Duckify/.venv/lib/python3.13/site-packages/matplotlib/image.py:1520\u001b[39m, in \u001b[36mimread\u001b[39m\u001b[34m(fname, format)\u001b[39m\n\u001b[32m   1513\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(fname, \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(parse.urlparse(fname).scheme) > \u001b[32m1\u001b[39m:\n\u001b[32m   1514\u001b[39m     \u001b[38;5;66;03m# Pillow doesn't handle URLs directly.\u001b[39;00m\n\u001b[32m   1515\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   1516\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mPlease open the URL for reading and pass the \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1517\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mresult to Pillow, e.g. with \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1518\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m``np.array(PIL.Image.open(urllib.request.urlopen(url)))``.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1519\u001b[39m         )\n\u001b[32m-> \u001b[39m\u001b[32m1520\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mimg_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfname\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m image:\n\u001b[32m   1521\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m (_pil_png_to_float_array(image)\n\u001b[32m   1522\u001b[39m             \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(image, PIL.PngImagePlugin.PngImageFile) \u001b[38;5;28;01melse\u001b[39;00m\n\u001b[32m   1523\u001b[39m             pil_to_array(image))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Duckify/.venv/lib/python3.13/site-packages/PIL/ImageFile.py:138\u001b[39m, in \u001b[36mImageFile.__init__\u001b[39m\u001b[34m(self, fp, filename)\u001b[39m\n\u001b[32m    135\u001b[39m \u001b[38;5;28mself\u001b[39m._fp: IO[\u001b[38;5;28mbytes\u001b[39m] | DeferredError\n\u001b[32m    136\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_path(fp):\n\u001b[32m    137\u001b[39m     \u001b[38;5;66;03m# filename\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m138\u001b[39m     \u001b[38;5;28mself\u001b[39m.fp = \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    139\u001b[39m     \u001b[38;5;28mself\u001b[39m.filename = os.fspath(fp)\n\u001b[32m    140\u001b[39m     \u001b[38;5;28mself\u001b[39m._exclusive_fp = \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'albedo.png'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-03-02 13:00:44,216| ERROR   | Secsh channel 0 open FAILED: Connection refused: Connect failed\n",
+      "2026-03-02 13:00:44,218| ERROR   | Could not establish connection from local ('127.0.0.1', 33187) to remote ('127.0.0.1', 5000) side of the tunnel: open new channel ssh error: ChannelException(2, 'Connect failed')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erreur globale SSH/Requête : ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))\n",
+      "[]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "from genai import main\n",
+    "from genai import client\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "FICHIER_OBJ = \"./models/round.obj\"  \n",
     "PROMPT = \"A simple blue duck with a red beak, matte plastic material, solid colors, studio lighting, clean look\"\n",
     "BASE_PATH = \"./genai\"\n",
-    "base_folder,files_path = main.run(base_path=BASE_PATH, fichier_obj=FICHIER_OBJ, prompt=PROMPT)\n",
+    "base_folder,files_path = client.run(base_path=BASE_PATH, fichier_obj=FICHIER_OBJ, prompt=PROMPT)\n",
     "print(files_path)\n",
     "\n",
     "import os\n",
@@ -98,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4d4aa99d",
    "metadata": {},
    "outputs": [
@@ -114,11 +111,10 @@
     }
    ],
    "source": [
-    "BASE_PATH = \"./genai\"\n",
     "import os\n",
     "for file in files_path:\n",
     "    if file.endswith('.png'):\n",
-    "        img = plt.imread(os.path.join(BASE_PATH+\"/extracted_20260226_150529/experiment_api/mesh\", file))\n",
+    "        img = plt.imread(file)\n",
     "        plt.imshow(img)\n",
     "        plt.show()"
    ]
